repos/emily-python/contents/test/reader/fail/backslashNumber.em
# Ought to fail: No number after \
# Arg: --ast
# Expect failure

\33
